# basic-tutorials

./: generate_color.py  main.py  pyproject.toml
